[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Drop.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/starfield.png" type="Texture" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/expl3.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/SimpleBeat.ogg" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 600, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 350 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 6.67178, 9.61019, 0, 0, 0, 0, 1015.71, 6.45367, 0, 0, 0, 0, 1016.76, 594.619, 0, 0, 0, 0, 7.72394, 590.41, 0, 0, 0, 0, 5.6196, 9.61019 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Asteroid = ExtResource( 2 )
Explosion = ExtResource( 3 )
Enemy = ExtResource( 4 )
Drop = ExtResource( 5 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 512.499, 382.324 )
scale = Vector2( 1.31782, 1.31782 )
texture = ExtResource( 6 )

[node name="Player" parent="." index="1" instance=ExtResource( 7 )]

position = Vector2( 512, 300 )

[node name="Edges" type="Node" parent="." index="2"]

[node name="Edge" type="StaticBody2D" parent="Edges" index="0"]

position = Vector2( 512, -50 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 10 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edges/Edge" index="0"]

shape = SubResource( 1 )

[node name="Edge2" type="StaticBody2D" parent="Edges" index="1"]

position = Vector2( 512, 650 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, -10 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edges/Edge2" index="0"]

shape = SubResource( 1 )

[node name="Edge3" type="StaticBody2D" parent="Edges" index="2"]

position = Vector2( -50, 300 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 10, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edges/Edge3" index="0"]

shape = SubResource( 2 )

[node name="Edge4" type="StaticBody2D" parent="Edges" index="3"]

position = Vector2( 1074, 300 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( -10, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 1.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edges/Edge4" index="0"]

shape = SubResource( 2 )

[node name="Asteroids" type="Node" parent="." index="3"]

[node name="Bullets" type="Node" parent="." index="4"]

[node name="AsteroidPath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )

[node name="PathLocation" type="PathFollow2D" parent="AsteroidPath" index="0"]

position = Vector2( 6.67178, 9.61019 )
rotation = -0.00312839
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 8 )]

[node name="EnemyTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="RestartTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Sounds" type="Node" parent="." index="9"]

[node name="AsteroidExplosion" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 9 )
volume_db = -7.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="EnemyExplosion" type="AudioStreamPlayer" parent="Sounds" index="1"]

stream = ExtResource( 9 )
volume_db = -7.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Music" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="explode" from="Player" to="." method="explode_player"]

[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]

[connection signal="shield_changed" from="Player" to="HUD" method="update_shield"]

[connection signal="shoot" from="Player" to="." method="add_bullet"]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]


